--- a/SiparisApp.Web/appsettings.json
+++ b/SiparisApp.Web/appsettings.json
@@ -11,25 +11,26 @@
       "role": "admin"
     },
 
-    "EmailSender": {
 
-      "Host": "smtp.gmail.com",
-      "Port": "587/465",
-      "EnableSSL": true,
-      "UserName": "",
-      "Password": ""
-
-
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
 
     },
-      "Logging": {
-        "LogLevel": {
-          "Default": "Information",
-          "Microsoft": "Warning",
-          "Microsoft.Hosting.Lifetime": "Information"
-        }
+    "AllowedHosts": "*"
+  },
+  "EmailSender": {
 
-      },
-      "AllowedHosts": "*"
-    }
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "EnableSSL": true,
+    "UserName": "aliveliav122212121121@gmail.com",
+    "Password": "muhammetB1"
+
+
+
   }
+}
